1.2.0 - up to 1.19.4